--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
+<!-- Section for the Header -->
+
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>website</title>
 </head>
 
+<!-- Section for the Body -->
 <body>
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
@@ -25,9 +28,13 @@
         </div>
     </div>
     <div class="hero"></div>
+
+    <!-- Second Sections -->
     <div class="content">
+
+
         <div class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt=""/>
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
