Finished adding Sections to HTML

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
+<!-- Section for the Header -->
+
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>website</title>
 </head>
 
+<!-- Section for the Body -->
 <body>
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
@@ -25,9 +28,13 @@
         </div>
     </div>
     <div class="hero"></div>
+
+    <!-- Second Sections -->
     <div class="content">
+
+
         <div class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt=""/>
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
@@ -47,7 +54,9 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </div>
+
     </div>
+    <!-- Third Section -->
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -71,6 +80,8 @@
             </p>
         </div>
     </div>
+
+    <!-- Footer Section -->
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
