--- a/Develop/index.html
+++ b/Develop/index.html
@@ -39,8 +39,8 @@
     <!-- Second Sections -->
     <section class="content">
 
-
-        <div class="search-engine-optimization">
+        <!-- Broken link on search engine optimization fixed -->
+        <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Pens computer, notebook, table"/>
             <h2>Search Engine Optimization</h2>
             <p>
